@@ -1,4 +1,4 @@
-MANIFEST for cm_tools, version t19930506
+MANIFEST for cm_tools, version t19930624
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for CM_TOOLS
